WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81470
[Qt] Don't prepare SQL statements when the database is not open
https://bugs.webkit.org/show_bug.cgi?id=81470
Summary
[Qt] Don't prepare SQL statements when the database is not open
Alexander Færøy
Reported
2012-03-18 04:29:34 PDT
We are currently preparing the SQL statements in the cookie jar regardless of whether or not the database is actually open. Due to this the terminal will be spammed with messages like: QSqlQuery::prepare: database not open Patch coming up.
Attachments
Patch
(2.60 KB, patch)
2012-03-18 04:31 PDT
,
Alexander Færøy
kenneth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Færøy
Comment 1
2012-03-18 04:31:46 PDT
Created
attachment 132488
[details]
Patch
Alexander Færøy
Comment 2
2012-03-18 04:32:09 PDT
Adding Dr. Kenneth for review!
Alexander Færøy
Comment 3
2012-03-18 17:23:37 PDT
Committed
r111142
: <
http://trac.webkit.org/changeset/111142
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug