[Qt] Don't prepare SQL statements when the database is not open https://bugs.webkit.org/show_bug.cgi?id=81470

Reviewed by Kenneth Rohde Christiansen.

Already covered by existing tests.

* platform/qt/CookieJarQt.cpp:
(WebCore::SharedCookieJarQt::deleteCookiesForHostname):
(WebCore::SharedCookieJarQt::deleteAllCookies):
(WebCore::SharedCookieJarQt::setCookiesFromUrl):
(WebCore::SharedCookieJarQt::loadCookies):

git-svn-id: svn://svn.chromium.org/blink/trunk@111142 bbb929c8-8fbe-4397-9dbb-9b2b20218538