third_party/WebKit/Source/WebCore/platform/qt/CookieJarQt.cpp
@@ -203,6 +203,9 @@ void SharedCookieJarQt::getHostnamesWithCookies(HashSet<String>& hostnames)
 
 void SharedCookieJarQt::deleteCookiesForHostname(const String& hostname)
 {
+    if (!m_database.isOpen())
+        return;
+
     QList<QNetworkCookie> cookies = allCookies();
     QList<QNetworkCookie>::Iterator it = cookies.begin();
     QList<QNetworkCookie>::Iterator end = cookies.end();
@@ -221,6 +224,9 @@ void SharedCookieJarQt::deleteCookiesForHostname(const String& hostname)
 
 void SharedCookieJarQt::deleteAllCookies()
 {
+    if (!m_database.isOpen())
+        return;
+
     QSqlQuery sqlQuery(m_database);
     sqlQuery.prepare(QLatin1String("DELETE * FROM cookies"));
     sqlQuery.exec();
@@ -246,6 +252,10 @@ bool SharedCookieJarQt::setCookiesFromUrl(const QList<QNetworkCookie>& cookieLis
 {
     if (!QNetworkCookieJar::setCookiesFromUrl(cookieList, url))
         return false;
+
+    if (!m_database.isOpen())
+        return false;
+
     QSqlQuery sqlQuery(m_database);
     sqlQuery.prepare(QLatin1String("INSERT OR REPLACE INTO cookies (cookieId, cookie) VALUES (:cookieIdvalue, :cookievalue)"));
     QVariantList cookiesIds;
@@ -275,6 +285,9 @@ void SharedCookieJarQt::ensureDatabaseTable()
 
 void SharedCookieJarQt::loadCookies()
 {
+    if (!m_database.isOpen())
+        return;
+
     QList<QNetworkCookie> cookies;
     QSqlQuery sqlQuery(m_database);
     sqlQuery.prepare(QLatin1String("SELECT cookie FROM cookies"));
